--- a/pelnar/package.json
+++ b/pelnar/package.json
@@ -5,14 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.0.0",
-    "@angular/common": "~16.0.0",
-    "@angular/compiler": "~16.0.0",
-    "@angular/core": "~16.0.0",
-    "@angular/forms": "~16.0.0",
-    "@angular/platform-browser": "~16.0.0",
-    "@angular/platform-browser-dynamic": "~16.0.0",
-    "@angular/router": "~16.0.0",
+    "@angular/animations": "16.0.5",
+    "@angular/common": "16.0.5",
+    "@angular/compiler": "16.0.5",
+    "@angular/core": "16.0.5",
+    "@angular/forms": "16.0.5",
+    "@angular/platform-browser": "16.0.5",
+    "@angular/platform-browser-dynamic": "16.0.5",
+    "@angular/router": "16.0.5",
     "@ngrx/component-store": "~16.0.0",
     "@ngrx/effects": "~16.0.0",
     "@ngrx/entity": "~16.0.0",
@@ -24,15 +24,15 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.0.0",
-    "@angular-devkit/core": "~16.0.0",
-    "@angular-devkit/schematics": "~16.0.0",
+    "@angular-devkit/build-angular": "16.0.5",
+    "@angular-devkit/core": "16.0.5",
+    "@angular-devkit/schematics": "16.0.5",
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "~16.0.0",
-    "@angular/language-service": "~16.0.0",
+    "@angular/cli": "16.0.5",
+    "@angular/compiler-cli": "16.0.5",
+    "@angular/language-service": "16.0.5",
     "@ngrx/schematics": "~16.0.0",
     "@ngrx/store-devtools": "~16.0.0",
     "@nx/cypress": "16.3.2",
@@ -63,3 +63,4 @@
     "typescript": "~5.0.2"
   }
 }
+
