--- a/pelnar/package.json
+++ b/pelnar/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "16.0.5",
+    "@angular/cdk": "~16.0.4",
     "@angular/common": "16.0.5",
     "@angular/compiler": "16.0.5",
     "@angular/core": "16.0.5",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "16.0.5",
+    "@angular/material": "~16.0.4",
     "@angular/platform-browser": "16.0.5",
     "@angular/platform-browser-dynamic": "16.0.5",
     "@angular/router": "16.0.5",
@@ -33,6 +36,7 @@
     "@angular/cli": "16.0.5",
     "@angular/compiler-cli": "16.0.5",
     "@angular/language-service": "16.0.5",
+    "@angular/material": "^16.0.4",
     "@ngrx/schematics": "~16.0.0",
     "@ngrx/store-devtools": "~16.0.0",
     "@nx/cypress": "16.3.2",
@@ -63,4 +67,3 @@
     "typescript": "~5.0.2"
   }
 }
-
